@@ -1,12 +1,5 @@
 package org.radarbase.management.service;
 
-import java.util.Collections;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import org.radarbase.auth.authorization.RoleAuthority;
 import org.radarbase.management.domain.Authority;
 import org.radarbase.management.domain.Role;
@@ -25,6 +18,12 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.function.Consumer;
 
 import static org.radarbase.management.web.rest.errors.EntityName.USER;
 
@@ -78,30 +77,32 @@ public class RoleService {
      */
     @Transactional(readOnly = true)
     public List<RoleDTO> findAll() {
-        User currentUser = userService.getUserWithAuthorities();
-        if (currentUser == null) {
+        Optional<User> optUser = userService.getUserWithAuthorities();
+        if (optUser.isEmpty()) {
             // return an empty list if we do not have a current user (e.g. with client credentials
             // oauth2 grant)
             return Collections.emptyList();
         }
+        User currentUser = optUser.get();
         List<String> currentUserAuthorities = currentUser.getAuthorities().stream()
-                .map(Authority::getName).collect(Collectors.toList());
+                .map(Authority::getName)
+                .toList();
 
-        if (currentUserAuthorities.contains(RoleAuthority.SYS_ADMIN.authority())) {
+        if (currentUserAuthorities.contains(RoleAuthority.SYS_ADMIN.getAuthority())) {
             log.debug("Request to get all Roles");
             return roleRepository.findAll().stream()
                     .map(roleMapper::roleToRoleDTO)
-                    .collect(Collectors.toList());
-        } else if (currentUserAuthorities.contains(RoleAuthority.PROJECT_ADMIN.authority())) {
+                    .toList();
+        } else if (currentUserAuthorities.contains(RoleAuthority.PROJECT_ADMIN.getAuthority())) {
             log.debug("Request to get project admin's project Projects");
             return currentUser.getRoles().stream()
-                    .filter(role -> RoleAuthority.PROJECT_ADMIN.authority()
+                    .filter(role -> RoleAuthority.PROJECT_ADMIN.getAuthority()
                             .equals(role.getAuthority().getName()))
                     .map(r -> r.getProject().getProjectName())
                     .distinct()
                     .flatMap(name -> roleRepository.findAllRolesByProjectName(name).stream())
                     .map(roleMapper::roleToRoleDTO)
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             return Collections.emptyList();
         }
@@ -117,9 +118,9 @@ public class RoleService {
         log.debug("Request to get admin Roles");
 
         return roleRepository
-                .findRolesByAuthorityName(RoleAuthority.SYS_ADMIN.authority()).stream()
+                .findRolesByAuthorityName(RoleAuthority.SYS_ADMIN.getAuthority()).stream()
                 .map(roleMapper::roleToRoleDTO)
-                .collect(Collectors.toCollection(LinkedList::new));
+                .toList();
     }
 
     /**
@@ -162,14 +163,14 @@ public class RoleService {
                     Collections.singletonMap("authorityName",
                             roleDto.getAuthorityName()));
         }
-        if (authority.scope() == RoleAuthority.Scope.ORGANIZATION
+        if (authority.getScope() == RoleAuthority.Scope.ORGANIZATION
                 && roleDto.getOrganizationId() == null) {
             throw new BadRequestException("Authority with "
                     + "authorityName should have organization ID",
                     USER, ErrorConstants.ERR_INVALID_AUTHORITY,
                     Collections.singletonMap("authorityName", roleDto.getAuthorityName()));
         }
-        if (authority.scope() == RoleAuthority.Scope.PROJECT
+        if (authority.getScope() == RoleAuthority.Scope.PROJECT
                 && roleDto.getProjectId() == null) {
             throw new BadRequestException("Authority with "
                     + "authorityName should have project ID",
@@ -185,7 +186,7 @@ public class RoleService {
      * @return role from database
      */
     public Role getGlobalRole(RoleAuthority role) {
-        return roleRepository.findRolesByAuthorityName(role.authority()).stream()
+        return roleRepository.findRolesByAuthorityName(role.getAuthority()).stream()
                 .findAny()
                 .orElseGet(() -> createNewRole(role, r -> { }));
     }
@@ -198,13 +199,13 @@ public class RoleService {
      */
     public Role getOrganizationRole(RoleAuthority role, Long organizationId) {
         return roleRepository.findOneByOrganizationIdAndAuthorityName(
-                        organizationId, role.authority())
+                        organizationId, role.getAuthority())
                 .orElseGet(() -> createNewRole(role, r -> {
                     r.setOrganization(organizationRepository.findById(organizationId)
                             .orElseThrow(() -> new NotFoundException(
                                     "Cannot find organization for authority",
                                     USER, ErrorConstants.ERR_INVALID_AUTHORITY,
-                                    Map.of("authorityName", role.authority(),
+                                    Map.of("authorityName", role.getAuthority(),
                                             "projectId",
                                             organizationId.toString()))));
                 }));
@@ -218,13 +219,13 @@ public class RoleService {
      */
     public Role getProjectRole(RoleAuthority role, Long projectId) {
         return roleRepository.findOneByProjectIdAndAuthorityName(
-                        projectId, role.authority())
+                        projectId, role.getAuthority())
                 .orElseGet(() -> createNewRole(role, r -> {
                     r.setProject(projectRepository.findByIdWithOrganization(projectId)
                             .orElseThrow(() -> new NotFoundException(
                                     "Cannot find project for authority",
                                     USER, ErrorConstants.ERR_INVALID_AUTHORITY,
-                                    Map.of("authorityName", role.authority(),
+                                    Map.of("authorityName", role.getAuthority(),
                                             "projectId",
                                             projectId.toString()))));
                 }));
@@ -240,11 +241,11 @@ public class RoleService {
 
         return roleRepository.findAllRolesByProjectName(projectName).stream()
                 .map(roleMapper::roleToRoleDTO)
-                .collect(Collectors.toCollection(LinkedList::new));
+                .toList();
     }
 
     private Authority getAuthority(RoleAuthority role) {
-        return authorityRepository.findByAuthorityName(role.authority())
+        return authorityRepository.findByAuthorityName(role.getAuthority())
                 .orElseGet(() -> authorityRepository.saveAndFlush(new Authority(role)));
     }
 
